fix app settings alignement

--- a/src/components/AppSettingsPage/AppSettingsPage.module.css
+++ b/src/components/AppSettingsPage/AppSettingsPage.module.css
@@ -104,7 +104,8 @@
 .ContentSection {
   display: flex;
   justify-content: space-between;
-  padding: 2rem 2rem 0rem;
+  padding-top: 1rem;
+  padding-bottom: 3rem;
   flex-direction: column;
   overflow-y: auto;
 }
@@ -305,6 +306,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 100%;
+}
+
+.APPOptionsButton{
+  display: flex;
+  justify-content: flex-end;
 }
 
 .portInput {
