--- a/src/components/AppsPage/AppsPage.css
+++ b/src/components/AppsPage/AppsPage.css
@@ -228,3 +228,8 @@
   width: 82.19%;
   margin-left: 17.81%;
 }
+
+
+.AppsPage {
+  padding: 2rem;
+}
